--- a/picshare/templates/base.html
+++ b/picshare/templates/base.html
@@ -16,7 +16,7 @@
     {% bootstrap_css %}
 
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
-    <link href="https://fonts.googleapis.com/css2?family=Lobster+Two&family=Satisfy&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">   
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
     {% endblock %}
 
