--- a/picshare/templates/navbar.html
+++ b/picshare/templates/navbar.html
@@ -9,7 +9,7 @@
     <div class="navbar navbar-inverse">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand "href="{% url 'index' %}"><b>MyPersonalGallery</b></a>
+                <a class="navbar-brand" href="{% url 'index' %}" style="font-family: 'Satisfy', cursive; font-size: 25px;"><b>MyPersonalGallery</b></a>
             </div>
         </div>
     </div>
