added image folder into static folder

--- a/picshare/templates/index.html
+++ b/picshare/templates/index.html
@@ -2,7 +2,7 @@
 
 {%block content%}
 {{ block.super}}
-<div class="container-fluid">
+<div class="container-fluid" styl>
     <h1>My Personal Gallery</h1>
     <p>This is my Personal Gallery where you can view different photos</p>
     <p>You can search for the photo you want according to the categoty given</p>
