--- a/picshare/templates/index.html
+++ b/picshare/templates/index.html
@@ -2,7 +2,7 @@
 
 {%block content%}
 {{ block.super}}
-<div class="container-fluid" styl>
+<div class="container-fluid" style="background-image: url(/static/images/bg.jpeg); background-size: cover; background-repeat: no-repeat; background-position: center; text-align: center; height: 100vh; overflow-x: hidden;">
     <h1>My Personal Gallery</h1>
     <p>This is my Personal Gallery where you can view different photos</p>
     <p>You can search for the photo you want according to the categoty given</p>
