--- a/picshare/templates/navbar.html
+++ b/picshare/templates/navbar.html
@@ -6,13 +6,24 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="navbar navbar-inverse">
+    <nav class="navbar navbar-inverse">
         <div class="container-fluid">
             <div class="navbar-header">
                 <a class="navbar-brand" href="{% url 'index' %}" style="font-family: 'Satisfy', cursive; font-size: 25px;"><b>MyPersonalGallery</b></a>
             </div>
+            
+            <div class="col-sm-4 col-md-4 navbar-right">
+                <form class="navbar-form" role="search" action="{% url 'search_category_results' %}">
+                    <div class="input-group">
+                        <input type="text" class="form-control" placeholder="Search Image" name="image">
+                        <div class="input-group-btn">
+                            <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></buttonn>
+                        </div>
+                    </div>
+                </form>
+            </div>
         </div>
-    </div>
+    </nav>
     
 </body>
 </html>
