made changes to project files

--- a/picshare/templates/images.html
+++ b/picshare/templates/images.html
@@ -11,7 +11,7 @@
                 <div class="panel-body" style=" box-shadow: 0 4px 8px 0 rgba(11, 10, 14, 0.87)">
                   <a href="" data-toggle="modal" data-target="#staticBackdrop{{images.id}}"><img src="{{images.image.url}}" alt="img show" class="img-responsive styled"></a>
                 </div>
-                <div class="panel-footer text-center"><b>{{images.name}}</b>
+                <div class="panel-footer text-center" style="font-family: 'Gabriela', serif;"><b>{{images.name}}</b>
                 </div>
             </div>
     
@@ -21,7 +21,7 @@
                 <div class="modal-dialog">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h2 class="modal-title" id="staticBackdropLabel text-center">{{images.name}}</h2>
+                            <h2 class="modal-title" id="staticBackdropLabel text-center" style="font-family: 'Gabriela', serif;">{{images.name}}</h2>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                         </div>
 
@@ -30,11 +30,11 @@
                         </div>
 
                         <div class="modal-footer">
-                            <div class="col-md-4">
+                            <div class="col-md-4" style="font-family: 'Gabriela', serif;">
                                 <p><b>Description:</b> {{images.description}}</p>
                             </div>
 
-                            <div class="col-md-4">
+                            <div class="col-md-4" style="font-family: 'Gabriela', serif;">
                                 <p><b>Location:</b> {{images.location}}</p>
                             </div>
                         </div>
