--- a/picshare/templates/index.html
+++ b/picshare/templates/index.html
@@ -6,7 +6,7 @@
     <h1 style="font-size:50px; margin-top:60px; color:aquamarine; font-family: 'Gabriela', serif;">My Personal Gallery</h1>
     <p style="color: beige;">This is my Personal Gallery where you can view different photos</p>
     <p style="color: beige;">You can search for the photo you want according to the category given</p>
-    <a href="{% url 'images' %}" class="btn btn-info btn-small">See Photos</a>
+    <a href="{% url 'images' %}" class="btn btn-info btn-small" style="font-family: 'Gabriela', serif;">See Photos</a>
     
 </div>
 
