--- a/picshare/templates/index.html
+++ b/picshare/templates/index.html
@@ -5,8 +5,8 @@
 <div class="container-fluid" style="background-image: url(/static/images/home.jpeg); background-size: cover; background-repeat: no-repeat; background-position: center; text-align: center; height: 100vh; overflow-x: hidden;">
     <h1 style="font-size:50px; margin-top:60px; color:aquamarine; font-family: 'Gabriela', serif;">My Personal Gallery</h1>
     <p style="color: beige;">This is my Personal Gallery where you can view different photos</p>
-    <p style="color: beige;">You can search for the photo you want according to the category given</p>
-    <a href="{% url 'images' %}" class="btn btn-info btn-small" style="font-family: 'Gabriela', serif;">See Photos</a>
+    <!-- <p style="color: beige;">You can search for the photo you want according to the category given</p> -->
+    <a href="{% url 'images' %}" class="btn btn-info btn-small" style="font-family: 'Gabriela', serif;">See Gallery</a>
     
 </div>
 
